--- a/src/templates/emailverification.html
+++ b/src/templates/emailverification.html
@@ -4,6 +4,15 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
       <style>
+        body {
+          width: 600px;
+          margin: auto;
+        }
+
+        p {
+          font-size: 18px;
+        }
+        
         .verify-button {
           padding:12px 20px; 
           color: white;
@@ -15,17 +24,38 @@
           border: none;
           margin: 20px;
         }
+
+        /* background color here matches with footer on home page */
+        .footer {
+          background-color: #f0fff4;
+        }
+
+        .footer-text {
+          font-size: 14px;
+          color: black;
+        }
+
       </style>
   </head>
   <body>
-    <p>Hi <%= displayname %>,</p>
-    <p>This is the great step to start sharing your life's experiences to empower others to make their life great.</p>
-    <p>Click the button below to verify your email address.</p>
-    <a type="button" class="verify-button" href="https://experiences.guru" target="_blank" noopener noreferer>
-      <%= url %>
-    </a>
-    <p>Feeling excited and want to know more, write us at buddy@experiences.guru</p>
-    
-    <p>Team experiences.</p>
+    <div class="header">
+
+    </div>
+    <div class="content">
+      <p>Hi <%= displayname %>,</p>
+      <p>This is the great step to start sharing your life's experiences to empower others to make their life great.</p>
+      <p>Click the button below to verify your email address.</p>
+      <a type="button" class="verify-button" href="<%= url %>" target="_blank" noopener noreferer>
+        Verify my email address
+      </a>
+      <p>Feeling excited and want to know more, write us at buddy@experiences.guru</p>
+      
+      <p>Team experiences.</p>
+    </div>>
+    <div class="footer">
+      <span><a class="footer-text">Experiences©<%= new Date().getFullYear() %></a></span>
+      <span><a class="footer-text">About</a></span>
+      <span><a class="footer-text">Privacy</a></span>
+    </div>
   </body>
 </html>
