more formatting in email verification

--- a/src/templates/emailverification.html
+++ b/src/templates/emailverification.html
@@ -37,9 +37,7 @@
       </style>
   </head>
   <body style="width:500px; margin:auto;">
-    <div class="header">
-
-    </div>
+    <div class="header"></div>
     <div class="content">
       <p style="font-size:'14px'">Hi <%= displayname %>,</p>
       <p style="font-size:'14px'">This is the great step to start sharing your life's experiences to empower others to make their life great.</p>
@@ -55,8 +53,8 @@
       >
         Verify my email address
       </a>
-      <br/>
-      <p style="font-size:'14px'">Feeling excited and want to know more, write us at <%= writetousemail %></p>
+      <br />
+      <p style="font-size:'14px'">Feeling excited and want to know more, write to us at <%= writetousemail %></p>
       
       <p style="font-size:'14px'">Team experiences.guru</p>
     </div>
