mail button spacing

--- a/src/templates/emailverification.html
+++ b/src/templates/emailverification.html
@@ -42,7 +42,7 @@
       <p style="font-size:'14px'">Hi <%= displayname %>,</p>
       <p style="font-size:'14px'">This is the great step to start sharing your life's experiences to empower others to make their life great.</p>
       <p style="font-size:'14px'">Click the button below to verify your email address.</p>
-      <br/>
+      <p>
       <a 
         style="padding:'12px 20px'; color:white; background-color:#319795; text-decoration: none; text-align: center; cursor: pointer; font-size: 20px; border: none;" 
         type="button" 
@@ -51,9 +51,9 @@
         target="_blank" 
         noopener noreferer
       >
-        Verify my email address
+      <span style="font-size:14px;">Verify my email address</span>
       </a>
-      <br />
+       </p>
       <p style="font-size:'14px'">Feeling excited and want to know more, write to us at <%= writetousemail %></p>
       
       <p style="font-size:'14px'">Team experiences.guru</p>
