--- a/src/templates/emailverification.html
+++ b/src/templates/emailverification.html
@@ -40,7 +40,6 @@
     <div class="header"></div>
     <div class="content">
       <p style="font-size:'14px'">Hi <%= displayname %>,</p>
-      <p style="font-size:'14px'">This is the great step to start sharing your life's experiences to empower others to make their life great.</p>
       <p style="font-size:'14px'">Click the button below to verify your email address.</p>
      
       <a 
@@ -54,7 +53,8 @@
       <span style="font-size:14px;">Verify my email address</span>
       </a>
      <br />
-      <p style="font-size:'14px'">Feeling excited and want to know more, write to us at <%= writetousemail %></p>
+     <p style="font-size: '14px'">Once done, you will be able to share experiences, keep a draft and a lot more coming in future.</p>
+      <p style="font-size:'14px'">Feeling excited and want to know more or want to give us a feedback about your experiences with us, write us at <%= writetousemail %></p>
       
       <p style="font-size:'14px'">Team experiences.guru</p>
     </div>
