--- a/src/templates/emailverification.html
+++ b/src/templates/emailverification.html
@@ -1,69 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <style>
-        body {
-          width: 500px;
-          margin: auto;
-        }
 
-        p {
-          font-size: 18px;
-        }
-        
-        .verify-button {
-          padding:12px 20px; 
-          color: white;
-          background-color:#319795;
-          text-decoration: none;
-          text-align: center;
-          cursor: pointer;
-          font-size: 20px;
-          border: none;
-        }
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <style>
+    body {
+      width: 500px;
+      margin: auto;
+    }
 
-        /* background color here matches with footer on home page */
-        .footer {
-          background-color: #f0fff4;
-        }
+    p {
+      font-size: 18px;
+    }
 
-        .footer-text {
-          font-size: 14px;
-          color: black;
-        }
+    .verify-button {
+      padding: 12px 20px;
+      color: white;
+      background-color: #319795;
+      text-decoration: none;
+      text-align: center;
+      cursor: pointer;
+      font-size: 20px;
+      border: none;
+    }
 
-      </style>
-  </head>
-  <body style="width:500px; margin:auto;">
-    <div class="header"></div>
-    <div class="content">
-      <p style="font-size:'14px'">Hi <%= displayname %>,</p>
-      <p style="font-size:'14px'">Click the button below to verify your email address.</p>
-     
-      <a 
-        style="padding:'12px 20px'; color:white; background-color:#319795; text-decoration: none; text-align: center; cursor: pointer; font-size: 20px; border: none;" 
-        type="button" 
-        class="verify-button" 
-        href="<%= url %>" 
-        target="_blank" 
-        noopener noreferer
-      >
+    /* background color here matches with footer on home page */
+    .footer {
+      background-color: #f0fff4;
+    }
+
+    .footer-text {
+      font-size: 14px;
+      color: black;
+    }
+  </style>
+</head>
+
+<body style="width:500px; margin:auto;">
+  <div class="header"></div>
+  <div class="content">
+    <p style="font-size:'14px'">Hi <%= displayname %>,</p>
+    <p style="font-size:'14px'">Click the button below to verify your email address. This link will be valid for 24
+      hours.</p>
+
+    <a style="padding:'12px 20px'; color:white; background-color:#319795; text-decoration: none; text-align: center; cursor: pointer; font-size: 20px; border: none;"
+      type="button" class="verify-button" href="<%= url %>" target="_blank" noopener noreferer>
       <span style="font-size:14px;">Verify my email address</span>
-      </a>
-     <br />
-     <p style="font-size: '14px'">Once done, you will be able to share experiences, keep a draft and a lot more coming in future.</p>
-      <p style="font-size:'14px'">Feeling excited and want to know more or want to give us a feedback about your experiences with us, write us at <%= writetousemail %></p>
-      
-      <p style="font-size:'14px'">Team experiences.guru</p>
-    </div>
-    <!--
+    </a>
+    <br />
+    <p style="font-size: '14px'">Once done, you will be able to share experiences, keep a draft and a lot more coming in
+      future.</p>
+    <p style="font-size:'14px'">Feeling excited and want to know more or want to give us a feedback about your
+      experiences with us, write us at <%= writetousemail %></p>
+
+    <p style="font-size:'14px'">Team experiences.guru</p>
+  </div>
+  <!--
     <div class="footer" style="background-color:#f0fff4">
       <span><a class="footer-text" style="font-size: 12px; margin:2px;" href="https://experiences.guru" target="_blank">Experiences©<%= new Date().getFullYear() %></a></span>
       <span><a class="footer-text" style="font-size: 12px; margin:2px;" target="_blank">About</a></span>
       <span><a class="footer-text" style="font-size: 12px; margin:2px;" heref="https://experiences.guru/privacy" target="_blank">Privacy</a></span>
     </div>
     -->
-  </body>
+</body>
+
 </html>
